--- a/templates/base.html
+++ b/templates/base.html
@@ -23,84 +23,85 @@
 </head>
 
 <body>
-    <div id="content-wrapper">
-        {% block nav %}
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-            
-            <div {%block nav_container_class%}class="container"{%end%}>
-                <a class="navbar-brand" href="/">
-                    <span class="title">ATXServer2</span></a>
-                </a>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <div class="navbar-nav">
-                        <a v-for="l in links" :href="l.path" class="nav-item nav-link"
-                            :class="{active: l.path == activePath}">
-                            <i :class="l.icon"></i> {{!l.name}}</a>
-                        </a>
-                        {% block navlinks %}
-                        {% end %}
-                        <!-- <a class="nav-item nav-link active" href='/'> -->
-                        <!-- </a> -->
-                    </div>
-                    <div class="navbar-nav navbar-right ml-auto">
-                        {% if current_user.admin %}
-                        <div class="nav-item">
-                            <a class="nav-link" href="/admin"><i class="fas fa-users-cog"></i> 后台管理</a>
-                        </div>
-                        {% end %}
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {{current_user.username}}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="/user">用户信息</a>
-                                <a class="dropdown-item" href="/logout">Logout</a>
-                            </div>
-                        </div>
-                    </div>
+<div id="content-wrapper">
+    {% block nav %}
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+
+        <div {%block nav_container_class%}class="container" {%end%}>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <!--                <div class="navbar-nav">-->
+                <!--                    <a v-for="l in links" :href="l.path" class="nav-item nav-link"-->
+                <!--                       :class="{active: l.path == activePath}">-->
+                <!--                        <i :class="l.icon"></i> {{!l.name}}</a>-->
+                <!--                    </a>-->
+                <!--                    {% block navlinks %}-->
+                <!--                    {% end %}-->
+                <!--                    &lt;!&ndash; <a class="nav-item nav-link active" href='/'> &ndash;&gt;-->
+                <!--                    &lt;!&ndash; </a> &ndash;&gt;-->
+                <!--                </div>-->
+                <div class="navbar-nav navbar-right ml-auto">
+                    <!--                    {% if current_user.admin %}-->
+                    <!--                    <div class="nav-item">-->
+                    <!--                        <a class="nav-link" href="/admin"><i class="fas fa-users-cog"></i> 后台管理</a>-->
+                    <!--                    </div>-->
+                    <!--                    {% end %}-->
+                    <a class="nav-link">
+                        {{current_user.username}}
+                    </a>
+                    <!--                    <div class="nav-item dropdown">-->
+                    <!--                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"-->
+                    <!--                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                    <!--                            {{current_user.username}}-->
+                    <!--                        </a>-->
+                    <!--                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">-->
+                    <!--                            <a class="dropdown-item" href="/user">用户信息</a>-->
+                    <!--                            <a class="dropdown-item" href="/logout">Logout</a>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
                 </div>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
             </div>
-        </nav>
 
-        <script>
-            new Vue({
-                el: "#navbarNavDropdown",
-                data: {
-                    links: [{
-                        path: "/devices",
-                        name: "设备列表",
-                        icon: ["fas", "fa-th-list"]
-                        // icon: ["fab", "fa-android"]
-                        // }, {
-                        //     path: "/apples",
-                        //     name: "苹果设备",
-                        //     icon: ["fab", "fa-apple"]
-                    }, {
-                        path: "/uploads",
-                        name: "文件上传",
-                        icon: ["fas fa-cloud-upload-alt"]
-                    }],
-                    activePath: location.pathname,
-                }
-            })
-        </script>
-        {% end %}
-        <div id="app">
-            {% block content %}{% end %}
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
-    </div>
+    </nav>
 
-    {% block script %}
     <script>
-        var empty = null;
+        new Vue({
+            el: "#navbarNavDropdown",
+            data: {
+                links: [{
+                    path: "/devices",
+                    name: "设备列表",
+                    icon: ["fas", "fa-th-list"]
+
+                    // icon: ["fab", "fa-android"]
+                    // }, {
+                    //     path: "/apples",
+                    //     name: "苹果设备",
+                    //     icon: ["fab", "fa-apple"]
+                }, {
+                    path: "/uploads",
+                    name: "文件上传",
+                    icon: ["fas fa-cloud-upload-alt"]
+                }],
+                activePath: location.pathname,
+            }
+        })
     </script>
     {% end %}
+    <div id="app">
+        {% block content %}{% end %}
+    </div>
+</div>
+
+{% block script %}
+<script>
+    var empty = null;
+</script>
+{% end %}
 </body>
 
 </html>
